# nuxt_scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: 01_basic_extraction.py  02_navigation_steps.py  03_calendar_date_selection.py  04_anti_detection_stealth.py  05_deserialization_advanced.py  06_parallel_extraction.py  07_error_handling.py  08_real_world_scenarios.py  09_api_response_capture.py  advanced_navigation.py  async_parallel.py  basic_usage.py  dismiss_popups_example.py
examples/racenet/: 01_historical_calendar_navigation.py  02_tomorrow_tab_navigation.py  03_simple_today_extraction.py
nuxt_scraper/: __init__.py  exceptions.py  extractor.py  parser.py  steps.py  utils.py
nuxt_scraper/anti_detection/: __init__.py  delays.py  mouse_movement.py  stealth_scripts.py  typing.py  user_agents.py  viewports.py
nuxtflow/: __init__.py  exceptions.py  extractor.py  parser.py  steps.py  utils.py
nuxtflow/anti_detection/: __init__.py  mouse_movement.py  stealth_scripts.py  typing.py  user_agents.py  viewports.py
tests/: conftest.py  test_anti_detection.py  test_deserialization_performance.py  test_extraction_methods.py  test_extractor.py  test_integration.py  test_parser.py  test_steps.py  test_utils.py
