[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuxt_scraper"
version = "0.2.2"
description = "Extract __NUXT_DATA__ from Nuxt.js applications using Playwright"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Hadi Rahjou", email = "rahjooh@yahoo.com" }]
keywords = ["nuxt", "playwright", "scraping", "ssr", "nuxt-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.40.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/rahjooh/nuxt_scraper"
Homepage = "https://github.com/rahjooh/nuxt_scraper"
Issues = "https://github.com/rahjooh/nuxt_scraper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nuxt_scraper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Long strings (user agents, JS snippets) cannot be wrapped
"nuxt_scraper/anti_detection/user_agents.py" = ["E501"]
"nuxt_scraper/anti_detection/stealth_scripts.py" = ["E501"]
# Keep NuxtFlowException name for backward compatibility
"nuxt_scraper/exceptions.py" = ["N818"]
